fix: dialog z-index

--- a/src/components/dialog/dialog.module.css
+++ b/src/components/dialog/dialog.module.css
@@ -1,6 +1,6 @@
 .backdrop {
   position: fixed;
-  z-index: 1;
+  z-index: 999999;
   inset: 0;
 
   display: flex;
